cert-manager/myapp-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: myapp
  namespace: cert-manager
spec:
  tls:
  - secretName: myapp-tls-prod
    hosts:
    - myapp.carlosvalarezo.com
  rules:
    - host: myapp.carlosvalarezo.com
      http:
        paths:
          - backend:
              serviceName: myapp
              servicePort: 3000
            path: /
